<resources>
    <string name="app_name">AndroidJetpackGithub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="not_one_saved_languages">You dont have saved any languages</string>
    <string name="save_language">SAVE LANGUAGE</string>

    <string name="menu_filter_by_language">Filter only mobile languages</string>
    <string name="menu_filter_none">Get all languages</string>

    <string name="menu_item_share_language">Share language</string>

    <string name="aplly_language_item_image">Picture of language</string>

    <string name="tcs_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam pharetra, nibh eget fringilla fringilla, nibh leo gravida leo, sed imperdiet purus dolor vitae urna. Etiam nec tincidunt lacus. Aenean porttitor, orci feugiat porttitor sollicitudin, ante tellus tempus augue, ac facilisis augue eros at mi. Quisque iaculis arcu vel purus egestas, eu aliquet metus pharetra. Sed fringilla, velit ut ullamcorper volutpat, lorem velit tincidunt lacus, eu viverra leo felis vitae risus.</string>


    <string name="gallery_content_description">Navigate to gallery screen</string>
    <string name="language_details_image_content_description">Image of language details</string>

    <string name="language_details_title">Language details</string>

    <string name="lego_title">Lego Home</string>


    <string name="created_by">Created by</string>

    <string name="created_at">Created at</string>


    <string name="share_text_language_details">Check out the %s language details in the Android Github app</string>
    <string name="saved_language_successfully">Saved language successfully</string>

    <string name="gallery_title">Repositories by</string>


    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_proba">Proba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">AndroidJetpackGithub Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_numbers">Pagging with DB and Network</string>
    <string name="menu_rxjava2">Rxjava2 examples</string>

    <string name="number_of_parts">Number of parts: %d</string>
    <string name="year">Year: %d</string>
    <string name="share_lego_set">Check out %s Lego set : %s</string>


    <string name="language">Language: %s</string>


    <string name="biometric_fingerprint_title">Fingerprint bottom sheet dialog</string>
    <string name="biometric_fingerprint_description">Please put your finger on the place for scanning fingerprint</string>
    <string name="biometric_fingerprint_cancel">Cancel</string>

</resources>